--- a/introducao-javascript/css/index.css
+++ b/introducao-javascript/css/index.css
@@ -136,3 +136,8 @@ button[disabled=disabled], button:disabled {
 .paciente-invalido{
     background-color: brown;
 }
+
+#mensagem-erro{
+    color:red;
+    
+}
